--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<htm>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
+<html>
+    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
     <body style='margin : 0px; overflow: scroll;'>
     <a-scene embedded arjs>
@@ -9,4 +9,4 @@
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
     </body>
-</htm>
+</html>
