--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
-            type='nft' url='./image_marker/example_5-star_grayscale'
+            type='nft' url='AR.js/image_marker/example_5-star_grayscale'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
         <a-box></a-box>
     </a-nft>
