--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
+<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
 <style>
     .arjs-loader {
@@ -21,24 +22,32 @@
     }
 </style>
 
-<!-- rawgithack development URL -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.2/aframe/build/aframe-ar-nft.js">
-
-<body style='margin : 0px; overflow: hidden;'>
+<body style="margin : 0px; overflow: hidden;">
 <!-- minimal loader shown until image descriptors are loaded -->
 <div class="arjs-loader">
     <div>Loading, please wait...</div>
 </div>
 <a-scene
-        vr-mode-ui='enabled: false;'
+        vr-mode-ui="enabled: false;"
         renderer="logarithmicDepthBuffer: true; precision: medium;"
-        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
-
-    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+        embedded
+        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+>
+    <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
     <a-nft
-            type='nft' url='AR.js/image_marker/example_5-star_grayscale'
-            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-        <a-box></a-box>
+            type="nft"
+            url="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+            smooth="true"
+            smoothCount="10"
+            smoothTolerance=".01"
+            smoothThreshold="5"
+    >
+        <a-entity
+                gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+                scale="5 5 5"
+                position="150 300 -100"
+        >
+        </a-entity>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
