--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image.prod.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
+
 </head>
 <body>
-<a-scene>
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-    <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-    <a-sky color="#ECECEC"></a-sky>
+<a-scene mindar-image="imageTargetSrc: ./marker/cover.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+
+    <a-assets>
+        <img id="baloon_img" src="./marker_data/cover/balloon.png">
+    </a-assets>
+
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-entity mindar-image-target="targetIndex: 0">
+
+        <a-image src="#baloon_img"
+                 height="0.17" width="0.17"
+                 position="0 -0.2 0"
+                 animation="property: object3D.position.y; to: 0.2; dur: 5000; easing: easeInOutQuad; dir: alternate; loop: true;">
+        </a-image>
+
+
+        <a-image src="#baloon_img"
+                 height="0.4" width="0.4"
+                 position="-0.25 0.2 0.15"
+                 animation="property: object3D.position.y; to: -0.2; dur: 5000; easing: easeInOutQuad; dir: alternate; loop: true;">
+        </a-image>
+
+    </a-entity>
+
+
 </a-scene>
 </body>
+
 </html>
+
