--- a/index.html
+++ b/index.html
@@ -5,32 +5,45 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
-
+    <script> AFRAME.registerComponent('play-on-click', {
+        init: function () {
+            var videoEl = this.el.getAttribute('material').src;
+            if (!videoEl) { return; }
+            this.el.object3D.visible = true;
+            videoEl.play();
+        }
+    });
+    </script>
 </head>
 <body>
-<a-scene mindar-image="imageTargetSrc: ./marker/cover.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+<a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
     <a-assets>
         <img id="baloon_img" src="./marker_data/cover/balloon.png">
+        <video id="snow" autoplay loop="true" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-    <a-entity mindar-image-target="targetIndex: 0">
 
+    <a-entity mindar-image-target="targetIndex: 0">
         <a-image src="#baloon_img"
                  height="0.17" width="0.17"
                  position="0 -0.2 0"
                  animation="property: object3D.position.y; to: 0.2; dur: 5000; easing: easeInOutQuad; dir: alternate; loop: true;">
         </a-image>
 
-
         <a-image src="#baloon_img"
                  height="0.4" width="0.4"
                  position="-0.25 0.2 0.15"
                  animation="property: object3D.position.y; to: -0.2; dur: 5000; easing: easeInOutQuad; dir: alternate; loop: true;">
         </a-image>
-
     </a-entity>
+
+    <a-entity mindar-image-target="targetIndex: 1">
+        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.5; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click visible="false">
+        </a-entity>
+    </a-entity>
+
 
 
 </a-scene>
