--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
     <script> AFRAME.registerComponent('play-on-click', {
         init: function () {
+            this.onClick = this.onClick.bind(this);
+        },
+        play: function () {
+            window.addEventListener('click', this.onClick);
+        },
+        pause: function () {
+            window.removeEventListener('click', this.onClick);
+        },
+        onClick: function (evt) {
             var videoEl = this.el.getAttribute('material').src;
             if (!videoEl) { return; }
-            this.el.object3D.visible = true;
             videoEl.play();
         }
     });
@@ -40,7 +48,7 @@
     </a-entity>
 
     <a-entity mindar-image-target="targetIndex: 1">
-        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.5; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click visible="false">
+        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.5; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click>
         </a-entity>
     </a-entity>
 
