--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
+
+
     <script> AFRAME.registerComponent('play-on-click', {
         init: function () {
             this.onClick = this.onClick.bind(this);
@@ -21,8 +23,36 @@
             videoEl.play();
         }
     });
+
+    AFRAME.registerComponent('hello-world', {
+        init: function () {
+            console.log('Hello, World!');
+            var el = document.querySelector('#box');
+            el.object3D.visible = true;
+
+        }
+    });
+    </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const january = document.querySelector('#january');
+            var el = document.querySelector('#box');
+
+            // detect target [1] found
+            january.addEventListener("targetFound", event => {
+                console.log("target found");
+                el.object3D.visible = true;
+            });
+            // detect target [1] lost
+            january.addEventListener("targetLost", event => {
+                console.log("target lost");
+                el.object3D.visible = false;
+            });
+        });
     </script>
 </head>
+
 <body>
 <a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
@@ -31,7 +61,9 @@
         <video id="snow" autoplay loop="true" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
     </a-assets>
 
-    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-camera position="0 0 0" look-controls="enabled: false">
+        <a-box id="box" position="0 0 -15" color="tomato" depth="2" height="2" width="2" visible="false"></a-box>
+    </a-camera>
 
     <a-entity mindar-image-target="targetIndex: 0">
         <a-image src="#baloon_img"
@@ -47,8 +79,8 @@
         </a-image>
     </a-entity>
 
-    <a-entity mindar-image-target="targetIndex: 1">
-        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.5; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click>
+    <a-entity id="january" mindar-image-target="targetIndex: 1">
+        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.2; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click>
         </a-entity>
     </a-entity>
 
