--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         onClick: function (evt) {
             var videoEl = this.el.getAttribute('material').src;
             if (!videoEl) { return; }
+            this.el.object3D.visible = true;
             videoEl.play();
+
+            var clickIcon = document.querySelector('#january_icon')
+            clickIcon.object3D.visible = false;
         }
     });
 
@@ -29,7 +33,6 @@
             console.log('Hello, World!');
             var el = document.querySelector('#box');
             el.object3D.visible = true;
-
         }
     });
     </script>
@@ -41,30 +44,43 @@
 
             // detect target [1] found
             january.addEventListener("targetFound", event => {
-                console.log("target found");
-                el.object3D.visible = true;
+                var clickIcon = document.querySelector('#january_icon')
+                clickIcon.object3D.visible = true;
             });
             // detect target [1] lost
             january.addEventListener("targetLost", event => {
-                console.log("target lost");
-                el.object3D.visible = false;
+                var videoPlane = document.querySelector('#januaryVideoPlane')
+                var videoEl = videoPlane.getAttribute('material').src;
+                videoEl.pause();
+                videoPlane.object3D.visible = false;
             });
         });
     </script>
 </head>
 
 <body>
-<a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+<a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
 
     <a-assets>
         <img id="baloon_img" src="./marker_data/cover/balloon.png">
+        <img id="click_img" src="./marker_data/january/click.png">
         <video id="snow" autoplay loop="true" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false">
-        <a-box id="box" position="0 0 -15" color="tomato" depth="2" height="2" width="2" visible="false"></a-box>
+        <!--<a-plane id="box" position="0 0 -10" color="tomato" height="2" width="2" visible="true"></a-plane>-->
     </a-camera>
 
+
+    <a-entity id="januaryVideoPlane" material="shader: flat;
+     blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
+              geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
+              visible="false"
+              play-on-click>
+    </a-entity>
+
+
+    <!--1 Шары-->
     <a-entity mindar-image-target="targetIndex: 0">
         <a-image src="#baloon_img"
                  height="0.17" width="0.17"
@@ -79,12 +95,14 @@
         </a-image>
     </a-entity>
 
+    <!--2 Снег-->
     <a-entity id="january" mindar-image-target="targetIndex: 1">
-        <a-entity material="shader: flat; blending: additive; transparent: true; opacity: 0.2; src: #snow" geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 0" rotation="0 0 0" play-on-click>
-        </a-entity>
+        <a-image id="january_icon" src="#click_img"
+                 height="0.5" width="0.5"
+                 position="0 0 0"
+                 >
+        </a-image>
     </a-entity>
-
-
 
 </a-scene>
 </body>
