--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
 
-
+    let marker_jan = 0;
     <script> AFRAME.registerComponent('play-on-click', {
         init: function () {
             this.onClick = this.onClick.bind(this);
@@ -18,13 +18,17 @@
             window.removeEventListener('click', this.onClick);
         },
         onClick: function (evt) {
-            var videoEl = this.el.getAttribute('material').src;
-            if (!videoEl) { return; }
-            this.el.object3D.visible = true;
-            videoEl.play();
+            if(marker_jan == 1) {
+                var videoEl = this.el.getAttribute('material').src;
+                if (!videoEl) {
+                    return;
+                }
+                this.el.object3D.visible = true;
+                videoEl.play();
 
-            var clickIcon = document.querySelector('#january_icon')
-            clickIcon.object3D.visible = false;
+                var clickIcon = document.querySelector('#january_icon')
+                clickIcon.object3D.visible = false;
+            }
         }
     });
 
@@ -46,6 +50,7 @@
             january.addEventListener("targetFound", event => {
                 var clickIcon = document.querySelector('#january_icon')
                 clickIcon.object3D.visible = true;
+                marker_jan = 1;
             });
             // detect target [1] lost
             january.addEventListener("targetLost", event => {
@@ -53,6 +58,7 @@
                 var videoEl = videoPlane.getAttribute('material').src;
                 videoEl.pause();
                 videoPlane.object3D.visible = false;
+                marker_jan = 0;
             });
         });
     </script>
