--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
     <a-camera position="0 0 0" look-controls="enabled: false">
         <!--<a-plane id="box" position="0 0 -10" color="tomato" height="2" width="2" visible="true"></a-plane>-->
+        <a-plane color="#ff0000" width="1.6" height="0.9" position="-0.58 -1.56 -2.64" scale="1.5 1.5 1.5"></a-plane>
+        <a-plane color="#ff0000" width="1.6" height="0.9" position="0.58 1.56 -2.64" scale="1.5 1.5 1.5"></a-plane>
     </a-camera>
 
 
