--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 clickIcon.object3D.visible = false;
             }
 
-            if(marker_jan == 2) {
+            if(marker_march == 1) {
                 var videoEl = this.el.getAttribute('material').src;
                 if (!videoEl) {
                     return;
