--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     let marker_jan = 0;
     let marker_march = 0;
 
-
     <script> AFRAME.registerComponent('play-on-click', {
         init: function () {
             this.onClick = this.onClick.bind(this);
@@ -23,28 +22,39 @@
             window.removeEventListener('click', this.onClick);
         },
         onClick: function (evt) {
-            if(marker_jan == 1) {
-                var videoEl = this.el.getAttribute('material').src;
-                if (!videoEl) {
-                    return;
-                }
-                this.el.object3D.visible = true;
-                videoEl.play();
 
+            if (marker_jan == 1) {
                 var clickIcon = document.querySelector('#january_icon')
                 clickIcon.object3D.visible = false;
-            }
 
-            if(marker_march == 1) {
-                var videoEl = this.el.getAttribute('material').src;
+                var el = document.querySelector('#januaryVideoPlane');
+                var videoEl = el.getAttribute('material').src;
                 if (!videoEl) {
                     return;
                 }
-                this.el.object3D.visible = true;
-                videoEl.play();
 
+                el.object3D.visible = true;
+                videoEl.play();
+            }
+
+            if (marker_march == 1) {
                 var clickIcon = document.querySelector('#march_icon')
                 clickIcon.object3D.visible = false;
+
+                var el = document.querySelector('#march_video_panel_1');
+                var videoEl = el.getAttribute('material').src;
+                if (!videoEl) {
+                    return;
+                }
+                videoEl.play();
+
+                setTimeout(function() {
+                    var el = document.querySelector('#march_video_panel_2');
+                    var videoEl = el.getAttribute('material').src;
+                    if(videoEl==null)
+                        return;
+                    videoEl.play();
+                }, 1500);
             }
         }
     });
@@ -69,12 +79,14 @@
                 clickIcon.object3D.visible = true;
                 marker_jan = 1;
             });
+
             // detect target [1] lost
             january.addEventListener("targetLost", event => {
                 var videoPlane = document.querySelector('#januaryVideoPlane')
                 var videoEl = videoPlane.getAttribute('material').src;
                 videoEl.pause();
                 videoPlane.object3D.visible = false;
+
                 marker_jan = 0;
             });
 
@@ -82,14 +94,26 @@
             march.addEventListener("targetFound", event => {
                 var clickIcon = document.querySelector('#march_icon')
                 clickIcon.object3D.visible = true;
+
+                var videoPlane = document.querySelector('#march_video_panel_1')
+                var videoPlane2 = document.querySelector('#march_video_panel_2')
+                videoPlane1.object3D.visible = true;
+                videoPlane2.object3D.visible = true;
+
                 marker_march = 1;
             });
             // detect target [march] lost
             march.addEventListener("targetLost", event => {
-                var videoPlane = document.querySelector('#marchVideoPlane1')
+                var videoPlane = document.querySelector('#march_video_panel_1')
                 var videoEl = videoPlane.getAttribute('material').src;
                 videoEl.pause();
                 videoPlane.object3D.visible = false;
+
+                var videoPlane2 = document.querySelector('#march_video_panel_2')
+                var videoEl2 = videoPlane.getAttribute('material').src;
+                videoEl2.pause();
+                videoPlane2.object3D.visible = false;
+
                 marker_march = 0;
             });
         });
@@ -102,28 +126,23 @@
     <a-assets>
         <img id="baloon_img" src="./marker_data/cover/balloon.png">
         <img id="click_img" src="./marker_data/january/click.png">
-        <video id="snow" autoplay loop="true" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
-        <video id="march_video" autoplay loop="true" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" loop autoplay muted></video>
+        <video id="snow" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" loop autoplay muted></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false">
-        <!--<a-plane id="box" position="0 0 -10" color="tomato" height="2" width="2" visible="true"></a-plane>-->
-        <a-plane material="shader: flat; depthTest: false; transparent: true;" color="#ff0000" width="1.6" height="0.9" position="-0.58 -1.56 -2.64" scale="1.5 1.5 1.5"></a-plane>
-        <a-plane material="shader: flat; depthTest: false; transparent: true;" color="#ff0000" width="1.6" height="0.9" position="0.58 1.56 -2.64" scale="1.5 1.5 1.5"></a-plane>
 
-        <!-- Март видео файлы-->
-        <a-plane id="marchVideoPlane1" material="shader: chromakey; src: #march_video; color: 0.0 0"; width="1.6" height="0.9" position="-0.58 -1.56 -2.64" scale="1.5 1.5 1.5" play-on-click></a-plane>
-        <a-plane id="marchVideoPlane2" material="shader: chromakey; src: #march_video; color: 0 0 0"; width="1.6" height="0.9" position="0.58 1.56 -2.64" scale="1.5 1.5 1.5"></a-plane>
+        <!-- january vide plane -->
+        <a-entity id="januaryVideoPlane" material="shader: flat; blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
+                  geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
+                  visible="false"
+                  play-on-click>
+        </a-entity>
+
+        <!-- march vide plane -->
+        <a-plane id="march_video_panel_1" material="shader: chromakey; src: #march_video; color: 0.0 0 0"; width="1.6" height="0.9" position="-0.58 -1.56 -2.64" scale="1.5 1.5 1.5" play-on-click></a-plane>
+        <a-plane id="march_video_panel_2" material="shader: chromakey; src: #march_video2; color: 0 0 0"; width="1.6" height="0.9" position="0.58 1.56 -2.64" rotation="180 180 0" scale="1.5 1.5 1.5"></a-plane>
     </a-camera>
-
-
-    <a-entity id="januaryVideoPlane" material="shader: flat;
-     blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
-              geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
-              visible="false"
-              play-on-click>
-    </a-entity>
-
 
     <!--1 Шары-->
     <a-entity mindar-image-target="targetIndex: 0">
