--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
         <img id="baloon_img" src="./marker_data/cover/balloon.png">
         <img id="click_img" src="./marker_data/january/click.png">
         <video id="snow" src="./marker_data/january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
-        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" loop autoplay muted></video>
+
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
+        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false">
