--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 videoEl.play();
 
                 setTimeout(function() {
-                    var el = document.querySelector('#march_video_panel_2');
-                    var videoEl = el.getAttribute('material').src;
-                    if(videoEl==null)
+                    var el2 = document.querySelector('#march_video_panel_2');
+                    var videoEl2 = el2.getAttribute('material').src;
+                    if(videoEl2==null)
                         return;
-                    videoEl.play();
+                    videoEl2.play();
                 }, 1500);
             }
         }
@@ -77,6 +77,7 @@
             january.addEventListener("targetFound", event => {
                 var clickIcon = document.querySelector('#january_icon')
                 clickIcon.object3D.visible = true;
+
                 marker_jan = 1;
             });
 
@@ -138,7 +139,7 @@
         <a-entity id="januaryVideoPlane" material="shader: flat; blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
                   geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
                   visible="false"
-                  play-on-click>
+                  >
         </a-entity>
 
         <!-- march vide plane -->
