--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
              */
 
-            if (marker_march == 1) {
+            //if (marker_march == 1) {
                 var clickIcon = document.querySelector('#march_icon')
                 clickIcon.object3D.visible = false;
 
@@ -57,7 +57,7 @@
                         return;
                     videoEl2.play();
                 }, 1500);
-            }
+            //}
         }
     });
 
