--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <!--ChromaKey shader-->
     <script src="https://unpkg.com/aframe-chromakey-material@1.1.4/dist/aframe-chromakey-material.min.js"></script>
 
+    <script>
     let marker_jan = 0;
     let marker_march = 0;
+    </script>
 
     <script> AFRAME.registerComponent('play-on-click', {
         init: function () {
@@ -22,8 +24,6 @@
             window.removeEventListener('click', this.onClick);
         },
         onClick: function (evt) {
-
-            /*
             if (marker_jan == 1) {
                 var clickIcon = document.querySelector('#january_icon')
                 clickIcon.object3D.visible = false;
@@ -38,26 +38,29 @@
                 videoEl.play();
             }
 
-             */
-
-            //if (marker_march == 1) {
+            if (marker_march == 1) {
                 var clickIcon = document.querySelector('#march_icon')
                 clickIcon.object3D.visible = false;
 
                 var el = document.querySelector('#march_video_panel_1');
+                el.object3D.visible = true;
                 var videoEl = el.getAttribute('material').src;
-                if(videoEl==null)
+                if (videoEl == null)
                     return;
                 videoEl.play();
 
-                setTimeout(function() {
+                setTimeout(function () {
+                    if (marker_march != 1)
+                        return;
+
                     var el2 = document.querySelector('#march_video_panel_2');
+                    el2.object3D.visible = true;
                     var videoEl2 = el2.getAttribute('material').src;
-                    if(videoEl2==null)
+                    if (videoEl2 == null)
                         return;
                     videoEl2.play();
                 }, 1500);
-            //}
+            }
         }
     });
 
@@ -100,8 +103,6 @@
 
                 var videoPlane = document.querySelector('#march_video_panel_1')
                 var videoPlane2 = document.querySelector('#march_video_panel_2')
-                videoPlane1.object3D.visible = true;
-                videoPlane2.object3D.visible = true;
 
                 marker_march = 1;
             });
@@ -109,12 +110,15 @@
             march.addEventListener("targetLost", event => {
                 var videoPlane = document.querySelector('#march_video_panel_1')
                 var videoEl = videoPlane.getAttribute('material').src;
+                videoEl.currentTime = 0;
                 videoEl.pause();
                 videoPlane.object3D.visible = false;
 
                 var videoPlane2 = document.querySelector('#march_video_panel_2')
                 var videoEl2 = videoPlane.getAttribute('material').src;
+                videoEl2.currentTime = 0;
                 videoEl2.pause();
+
                 videoPlane2.object3D.visible = false;
 
                 marker_march = 0;
@@ -137,16 +141,7 @@
 
     <a-camera position="0 0 0" look-controls="enabled: false">
 
-        <!-- january vide plane -->
-        <a-entity id="januaryVideoPlane" material="shader: flat; blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
-                  geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
-                  visible="false"
-                  >
-        </a-entity>
 
-        <!-- march vide plane -->
-        <a-plane id="march_video_panel_1" material="shader: chromakey; src: #march_video; color: 0.0 0 0"; width="1.6" height="0.9" position="-0.58 -1.56 -2.64" scale="1.5 1.5 1.5" play-on-click></a-plane>
-        <a-plane id="march_video_panel_2" material="shader: chromakey; src: #march_video2; color: 0 0 0"; width="1.6" height="0.9" position="0.58 1.56 -2.64" rotation="180 180 0" scale="1.5 1.5 1.5"></a-plane>
     </a-camera>
 
     <!--1 Шары-->
@@ -173,6 +168,12 @@
         </a-image>
     </a-entity>
 
+    <a-entity id="januaryVideoPlane" material="shader: flat; blending: additive; transparent: true; depthTest: false; opacity: 0.5; src: #snow"
+              geometry="primitive: plane; width: 1.2; height: 0.7;" position="0 0 -10" scale="24 24 1" rotation="0 0 0"
+              visible="false"
+    >
+    </a-entity>
+
     <!--3 Веточки-->
     <a-entity id="march" mindar-image-target="targetIndex: 2">
         <a-image id="march_icon" src="#click_img"
@@ -181,6 +182,10 @@
         >
         </a-image>
     </a-entity>
+
+    <!-- march vide plane -->
+    <a-plane id="march_video_panel_1" material="shader: chromakey; src: #march_video; color: 0.0 0 0"; width="1.6" height="0.9" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="false" play-on-click></a-plane>
+    <a-plane id="march_video_panel_2" material="shader: chromakey; src: #march_video2; color: 0 0 0"; width="1.6" height="0.9" position="0.58 3.4 -12.64" rotation="180 180 0" scale="4 4 4" visible="false"></a-plane>
 
 </a-scene>
 </body>
