--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 </head>
 
 <body>
-<a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+<a-scene mindar-image="imageTargetSrc: ./marker/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
     <a-assets>
         <img id="baloon_img" src="marker_data/0_cover/balloon.png">
         <img id="click_img" src="marker_data/1_january/click.png">
         <video id="snow" src="marker_data/1_january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
-        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
-        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted></video>
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
+        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
         <img id="rainbow" src="marker_data/4_april/rainbow.png">
     </a-assets>
