--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 clickIcon.object3D.visible = false;
 
                 var el = document.querySelector('#march_video_panel_1');
-                el.object3D.visible = true;
+                //el.object3D.visible = true;
                 var videoEl = el.getAttribute('material').src;
-                if (videoEl == null)
+                if (!videoEl)
                     return;
                 videoEl.play();
 
@@ -55,9 +55,9 @@
                         return;
 
                     var el2 = document.querySelector('#march_video_panel_2');
-                    el2.object3D.visible = true;
+                    //el2.object3D.visible = true;
                     var videoEl2 = el2.getAttribute('material').src;
-                    if (videoEl2 == null)
+                    if (!videoEl2)
                         return;
                     videoEl2.play();
                 }, 1500);
@@ -146,8 +146,8 @@
         <img id="click_img" src="marker_data/1_january/click.png">
         <video id="snow" src="marker_data/1_january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
-        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin playsinline muted></video>
-        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin playsinline muted></video>
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
+        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
         <img id="rainbow" src="marker_data/4_april/rainbow.png">
     </a-assets>
@@ -207,12 +207,12 @@
     </a-entity>
 
     <!-- march vide plane -->
-    <a-entity id="march_video_panel_1" material="shader: chromakey; src: #march_video; color: 0 0 0";
+    <a-entity id="march_video_panel_1" material="shader: flat; src: #march_video; color: 0 0 0";
               geometry="primitive: plane; width:1.6; height:0.9;" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="false" play-on-click
               visible="false"
     ></a-entity>
 
-    <a-entity id="march_video_panel_2" material="shader: chromakey; src: #march_video2; color: 0 0 0";
+    <a-entity id="march_video_panel_2" material="shader: flat; src: #march_video2; color: 0 0 0";
               geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" rotation="180 180 0" scale="4 4 4" visible="false"
               visible="false"
     ></a-entity>
