--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 clickIcon.object3D.visible = false;
 
                 var el = document.querySelector('#march_video_panel_1');
-                //el.object3D.visible = true;
                 var videoEl = el.getAttribute('material').src;
                 if (!videoEl)
                     return;
+                el.object3D.visible = true;
                 videoEl.play();
 
                 setTimeout(function () {
@@ -55,10 +55,11 @@
                         return;
 
                     var el2 = document.querySelector('#march_video_panel_2');
-                    //el2.object3D.visible = true;
+
                     var videoEl2 = el2.getAttribute('material').src;
                     if (!videoEl2)
                         return;
+                    el2.object3D.visible = true;
                     videoEl2.play();
                 }, 1500);
             }
@@ -146,8 +147,8 @@
         <img id="click_img" src="marker_data/1_january/click.png">
         <video id="snow" src="marker_data/1_january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
-        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
-        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted autoplay></video>
+        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted autoplay></video>
 
         <img id="rainbow" src="marker_data/4_april/rainbow.png">
     </a-assets>
