--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                     var videoEl2 = el2.getAttribute('material').src;
                     if (!videoEl2)
                         return;
+
                     el2.object3D.visible = true;
                     videoEl2.play();
+
                 }, 1500);
             }
         }
@@ -208,12 +210,12 @@
     </a-entity>
 
     <!-- march vide plane -->
-    <a-entity id="march_video_panel_1" material="shader: flat; src: #march_video; color: 0 0 0";
+    <a-entity id="march_video_panel_1" material="shader: chromakey; src: #march_video; color: 0 0 0";
               geometry="primitive: plane; width:1.6; height:0.9;" position="-0.58 -3.4 -12.64" scale="4 4 4" visible="false" play-on-click
     ></a-entity>
 
-    <a-entity id="march_video_panel_2" material="shader: flat; src: #march_video2; color: 0 0 0";
-              geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" rotation="180 180 0" scale="4 4 4" visible="false"
+    <a-entity id="march_video_panel_2" material="shader: chromakey; src: #march_video2; color: 0 0 0";
+              geometry="primitive: plane; width:1.6; height:0.9;" position="0.58 3.4 -12.64" scale="4 4 4" visible="false"
     ></a-entity>
 
 
