--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <img id="click_img" src="marker_data/1_january/click.png">
         <video id="snow" src="marker_data/1_january/snow_video.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
 
-        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
-        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" crossOrigin="anonymous" muted></video>
+        <video id="march_video" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted autoplay playsinline crossorigin="anonymous"></video>
+        <video id="march_video2" src="./marker_data/march/tree_video_b.mp4" width="160" height="90" muted autoplay playsinline crossorigin="anonymous"></video>
 
         <img id="rainbow" src="marker_data/4_april/rainbow.png">
     </a-assets>
