--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 el.object3D.visible = true;
                 videoEl.play();
 
-                setTimeout(function () {
+                //setTimeout(function () {
                     var el2 = document.querySelector('#march_video_panel_2');
 
                     var videoEl2 = el2.getAttribute('material').src;
@@ -61,7 +61,7 @@
                     el2.object3D.visible = true;
                     videoEl2.play();
 
-                }, 1500);
+                //}, 1500);
             }
         }
     });
